--- a/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
+++ b/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
@@ -20,6 +20,10 @@
   "kubejs.ponder.ae2_single.text_7": "Having two separate Controllers will disrupt the network, shutting the whole thing down.",
   "kubejs.ponder.ae2_single.text_8": "However, placing Controllers together will form a multiblock!",
   "kubejs.ponder.ae2_single.text_9": "The more faces, the more channels!",
+  "kubejs.ponder.basic_usage.header": "Setup Distillation Tower",
+  "kubejs.ponder.basic_usage.text_1": "The Base of this distillation tower is the Cast Iron Distillation Controller",
+  "kubejs.ponder.basic_usage.text_2": "Tower is assembled by placing three Distiller on top of the Controller",
+  "kubejs.ponder.basic_usage.text_3": "Finally place a Blaze Burner underneath",
   "kubejs.ponder.hephaestus_forge_construction.header": "Construction of Hephaestus Forge",
   "kubejs.ponder.hephaestus_forge_construction.text_1": "Ensure You Have A Clear Surface",
   "kubejs.ponder.hephaestus_forge_construction.text_2": "Place Arcane Polished Darkstone In This Formation",
