mods and fix build

--- a/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
+++ b/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
@@ -20,27 +20,7 @@
   "kubejs.ponder.ae2_single.text_7": "Having two separate Controllers will disrupt the network, shutting the whole thing down.",
   "kubejs.ponder.ae2_single.text_8": "However, placing Controllers together will form a multiblock!",
   "kubejs.ponder.ae2_single.text_9": "The more faces, the more channels!",
-  "kubejs.ponder.basic_usage.header": "Setup Distillation Tower",
-  "kubejs.ponder.basic_usage.text_1": "The Base of this distillation tower is the Cast Iron Distillation Controller",
-  "kubejs.ponder.basic_usage.text_2": "Tower is assembled by placing three Distiller on top of the Controller",
-  "kubejs.ponder.basic_usage.text_3": "Finally place a Blaze Burner underneath",
-  "kubejs.ponder.hephaestus_forge_construction.header": "Construction of Hephaestus Forge",
-  "kubejs.ponder.hephaestus_forge_construction.text_1": "Ensure You Have A Clear Surface",
-  "kubejs.ponder.hephaestus_forge_construction.text_2": "Place Arcane Polished Darkstone In This Formation",
-  "kubejs.ponder.hephaestus_forge_construction.text_3": "Surround The Center Piece Of Arcane Polished Darkstone With Chiseled Arcane Polished Darkstone",
-  "kubejs.ponder.hephaestus_forge_construction.text_4": "Fill In The Rest With Polished Darkstone",
-  "kubejs.ponder.hephaestus_forge_construction.text_5": "Once Again, Ensure You Have A Clear Surface Around Your Base",
-  "kubejs.ponder.hephaestus_forge_construction.text_6": "Now, Place A Smithing Table In The Centre Of The Base",
-  "kubejs.ponder.hephaestus_forge_setup.header": "Hephaestus Forge Setup",
-  "kubejs.ponder.hephaestus_forge_setup.text_1": "Now You Have Constructed Your Forge You\u0027ll Need To Set It Up For Rituals!",
-  "kubejs.ponder.hephaestus_forge_setup.text_2": "Pedestals Will Be Required To Create Rituals.",
-  "kubejs.ponder.hephaestus_forge_setup.text_3": "Most Rituals Require Six Pedestals.",
-  "kubejs.ponder.hephaestus_forge_setup.text_4": "The Hephaestus Forge Is Useless Without A Source Of Aureal.",
-  "kubejs.ponder.hephaestus_forge_setup.text_5": "Construct This Structure Near Your Forge.",
   "createblock.ponder.chromatic_dust.header": "Making Chromatic Dust",
   "createblock.ponder.chromatic_dust.text_1": "Chromatic Dust can be created by a process called Soaking",
-  "createblock.ponder.chromatic_dust.text_2": "Pl",
-  "createblock.ponder.crimson_nylium_spores.header": "Using Crimson Nylium Spores",
-  "createblock.ponder.mycelium_spores.header": "Using Mycelium Spores",
-  "createblock.ponder.warped_nylium_spores.header": "Using Warped Nylium Spores"
+  "createblock.ponder.chromatic_dust.text_2": "Pl"
 }
