--- a/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
+++ b/minecraft/kubejs/assets/ponderjs_generated/lang/en_us.json
@@ -11,7 +11,6 @@
   "kubejs.ponder.ae2_single.header": "The Controller Block",
   "kubejs.ponder.ae2_single.text_1": "The ME Controller is the brain of the network.",
   "kubejs.ponder.ae2_single.text_10": "Color your Cables to keep them separate.",
-  "kubejs.ponder.ae2_single.text_11": "Ponder originally made for FTB University 1.19!",
   "kubejs.ponder.ae2_single.text_2": "Each Controller face provides 32 channels.",
   "kubejs.ponder.ae2_single.text_3": "Done properly, a single Controller can support 192 channels",
   "kubejs.ponder.ae2_single.text_4": "Sometimes this isn\u0027t enough, however.",
@@ -20,7 +19,68 @@
   "kubejs.ponder.ae2_single.text_7": "Having two separate Controllers will disrupt the network, shutting the whole thing down.",
   "kubejs.ponder.ae2_single.text_8": "However, placing Controllers together will form a multiblock!",
   "kubejs.ponder.ae2_single.text_9": "The more faces, the more channels!",
+  "kubejs.ponder.hephaestus_forge_construction.header": "Construction of Hephaestus Forge",
+  "kubejs.ponder.hephaestus_forge_construction.text_1": "Ensure You Have A Clear Surface",
+  "kubejs.ponder.hephaestus_forge_construction.text_2": "Place Arcane Polished Darkstone In This Formation",
+  "kubejs.ponder.hephaestus_forge_construction.text_3": "Surround The Center Piece Of Arcane Polished Darkstone With Chiseled Arcane Polished Darkstone",
+  "kubejs.ponder.hephaestus_forge_construction.text_4": "Fill In The Rest With Polished Darkstone",
+  "kubejs.ponder.hephaestus_forge_construction.text_5": "Once Again, Ensure You Have A Clear Surface Around Your Base",
+  "kubejs.ponder.hephaestus_forge_construction.text_6": "Now, Place A Smithing Table In The Centre Of The Base",
+  "kubejs.ponder.hephaestus_forge_setup.header": "Hephaestus Forge Setup",
+  "kubejs.ponder.hephaestus_forge_setup.text_1": "Now You Have Constructed Your Forge You\u0027ll Need To Set It Up For Rituals!",
+  "kubejs.ponder.hephaestus_forge_setup.text_2": "Pedestals Will Be Required To Create Rituals.",
+  "kubejs.ponder.hephaestus_forge_setup.text_3": "Most Rituals Require Six Pedestals.",
+  "kubejs.ponder.hephaestus_forge_setup.text_4": "The Hephaestus Forge Is Useless Without A Source Of Aureal.",
+  "kubejs.ponder.hephaestus_forge_setup.text_5": "Construct This Structure Near Your Forge.",
+  "kubejs.ponder.spatial_storage_big.header": "Efficiency",
+  "kubejs.ponder.spatial_storage_big.text_1": "Spatial IO costs a large amount of energy, especially for bigger structures.",
+  "kubejs.ponder.spatial_storage_big.text_10": "You can keep adding more lines for even higher efficiency.",
+  "kubejs.ponder.spatial_storage_big.text_11": "With these, it\u0027s at 66.66% effiency, costing 7.92 million FE.",
+  "kubejs.ponder.spatial_storage_big.text_12": "Additional Pylons can also be vertical!",
+  "kubejs.ponder.spatial_storage_big.text_13": "With these, the SCS is at 100% efficiency, and only costs 1.62 million FE!",
+  "kubejs.ponder.spatial_storage_big.text_14": "Each line of Pylons takes up a channel.",
+  "kubejs.ponder.spatial_storage_big.text_15": "While this isn\u0027t a problem for smaller or less efficient SCSs, larger ones will need a Controller.",
+  "kubejs.ponder.spatial_storage_big.text_2": "This SCS is 8x7x8, and costs a massive 48,600,000 FE!",
+  "kubejs.ponder.spatial_storage_big.text_3": "Each SCS has an \"Efficiency\" percentage, visible in the IO Port.",
+  "kubejs.ponder.spatial_storage_big.text_4": "This SCS has an efficiency of 28.57%, which is why it costs so much.",
+  "kubejs.ponder.spatial_storage_big.text_5": "If we can raise the efficiency, we can lower the FE cost!",
+  "kubejs.ponder.spatial_storage_big.text_6": "Add another line of Pylons, parallel to one of the existing ones.",
+  "kubejs.ponder.spatial_storage_big.text_7": "The efficiency is now 38.09%, and the cost is now 30.88 million FE.",
+  "kubejs.ponder.spatial_storage_big.text_8": "You don\u0027t have to put a full line, but it\u0027s more efficient to.",
+  "kubejs.ponder.spatial_storage_big.text_9": "Adding only two brings the efficiency to only 30.95%, and the cost to 43.39 million FE.",
+  "kubejs.ponder.spatial_storage_simple.header": "Spatial Storage",
+  "kubejs.ponder.spatial_storage_simple.text_1": "AE2\u0027s Spatial Storage allows you to take an area in the world and store it digitally.",
+  "kubejs.ponder.spatial_storage_simple.text_10": "Traditionally, the Pylons are placed like this...",
+  "kubejs.ponder.spatial_storage_simple.text_11": "...but for visibility\u0027s sake, let\u0027s keep it here.",
+  "kubejs.ponder.spatial_storage_simple.text_12": "So long as they\u0027re surrounding the same area, it doesn\u0027t matter.",
+  "kubejs.ponder.spatial_storage_simple.text_13": "Attach the Pylons to the same network...",
+  "kubejs.ponder.spatial_storage_simple.text_14": "...and connect a Spatial IO Port as well.",
+  "kubejs.ponder.spatial_storage_simple.text_15": "This entire structure is called the Spatial Containment Structure.",
+  "kubejs.ponder.spatial_storage_simple.text_16": "You can only have one per network...",
+  "kubejs.ponder.spatial_storage_simple.text_17": "...though really, these are often single-use only.",
+  "kubejs.ponder.spatial_storage_simple.text_18": "Insert a Spatial Storage Cell...",
+  "kubejs.ponder.spatial_storage_simple.text_19": "...give it a Redstone signal...",
+  "kubejs.ponder.spatial_storage_simple.text_2": "The smallest Spatial Storage Cell can hold a 2x2x2 volume, and the largest can hold up to a 128x128x128.",
+  "kubejs.ponder.spatial_storage_simple.text_20": "...and the structure is stored into the Disk!",
+  "kubejs.ponder.spatial_storage_simple.text_21": "Now you can take this filled Disk and bring it home.",
+  "kubejs.ponder.spatial_storage_simple.text_22": "Recreate the Spatial Containment Structure.",
+  "kubejs.ponder.spatial_storage_simple.text_23": "Insert the Spatial Storage Cell...",
+  "kubejs.ponder.spatial_storage_simple.text_24": "...give it a Redstone signal...",
+  "kubejs.ponder.spatial_storage_simple.text_25": "...and the structure will exit the Cell!",
+  "kubejs.ponder.spatial_storage_simple.text_26": "A note: Entities (including Players) can also get caught!",
+  "kubejs.ponder.spatial_storage_simple.text_27": "If you accidentally get caught in the Spatial Storage dimension, you will be STUCK THERE!",
+  "kubejs.ponder.spatial_storage_simple.text_28": "The only way to get back out is teleportation, commands, death, or getting someone/something in the overworld to un-store you.",
+  "kubejs.ponder.spatial_storage_simple.text_3": "We\u0027ll go over the smallest one first.",
+  "kubejs.ponder.spatial_storage_simple.text_4": "Say we find some Flawless Budding Certus Quartz.",
+  "kubejs.ponder.spatial_storage_simple.text_5": "We want to bring it home, but we can\u0027t safely mine it.",
+  "kubejs.ponder.spatial_storage_simple.text_6": "So, instead we\u0027ll use Spatial Storage!",
+  "kubejs.ponder.spatial_storage_simple.text_7": "Place Spatial Pylons around the area you want to move.",
+  "kubejs.ponder.spatial_storage_simple.text_8": "They must by one block longer than the area being moved!",
+  "kubejs.ponder.spatial_storage_simple.text_9": "Here, since we\u0027re moving a 2x2x2 volume, each Pylon must be 3 long.",
   "createblock.ponder.chromatic_dust.header": "Making Chromatic Dust",
   "createblock.ponder.chromatic_dust.text_1": "Chromatic Dust can be created by a process called Soaking",
-  "createblock.ponder.chromatic_dust.text_2": "Pl"
+  "createblock.ponder.chromatic_dust.text_2": "Drop a piece of Cinder Flour into the liquid",
+  "createblock.ponder.crimson_nylium_spores.header": "Using Crimson Nylium Spores",
+  "createblock.ponder.mycelium_spores.header": "Using Mycelium Spores",
+  "createblock.ponder.warped_nylium_spores.header": "Using Warped Nylium Spores"
 }
